k8s-specifications/rollout-result-app.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: result-app-deploy
  labels:
    app: demo-result-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: demo-result-app
  template:
    metadata:
      labels:
        app: demo-result-app
    spec:
      containers:
        - name: result-app
          image: devendradhoot/result:v1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
           
  strategy:
     blueGreen:
       activeService: result-service
       previewService: result-service-preview
       autoPromotionEnabled: false
