k8s-specifications/result-app-preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service-preview
  labels:
    app: demo-result-app
spec:
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30031
  selector:
    app: demo-result-app
  type: NodePort
