k8s-specifications/result-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-service
  labels:
    app: demo-result-app
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: demo-result-app
