k8s-specifications/voting-app-preview-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: voting-service-preview
  labels:
    app: demo-voting-app
spec:
  ports:
    - port: 80
      targetPort: http
      nodePort: 30030
      protocol: TCP
      name: http
  selector:
    app: demo-voting-app
  type: NodePort
