k8s-specifications/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: voteapp-demo
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/app-root: "/"
spec:
  rules:
  - host: devopslab.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: voting-service
          servicePort: 80
  - host: devopslab-result.tk
    http:
      paths:
      - path: /
        backend:
          serviceName: result-service
          servicePort: 80
